caddy-ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage
  namespace: default
  annotations:
    kubernetes.io/ingressClassName: caddy
spec:
  rules:
    - host: storage.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
